# NatNetROS

./: CMakeLists.txt  README.md  package.xml
launch/: default.launch  test.launch
msg/: Marker.msg  RigidBody.msg
src/: natnet_node.cpp  viz_node.cpp
